Remove deprecated APIs and deprecated Java locale usage
- delete deprecated card expiration boolean-based APIs and keep only DateRange-based entry points
- remove ObjectGeneratorConfig.defaults() and clean tests/docs that still referenced it
- keep ObjectGeneratorConfig overloads as normal supported APIs instead of deprecated ones
- replace deprecated JDK Locale constructors with Locale.of(...) across source, tests, and docs
- remove deprecated test markers and stale deprecation language from docs and planning files
- keep the repo green with full pre-commit checks and coverage under Java 21