@@ -56,10 +56,10 @@ import java.util.Random;
  * <p><strong>Locale-Aware Generation:</strong>
  * <pre>{@code
  * // Generate currency for specific locale
- * Locale usLocale = new Locale("en", "US");
+ * Locale usLocale = Locale.of("en", "US");
  * String usCurrency = gen.generate(usLocale);  // "USD"
  *
- * Locale jpLocale = new Locale("ja", "JP");
+ * Locale jpLocale = Locale.of("ja", "JP");
  * CurrencyInfo jpInfo = gen.generateWithInfo(jpLocale);
  * System.out.println(jpInfo.code());           // "JPY"
  * System.out.println(jpInfo.symbol());         // "¥"
