@@ -64,7 +64,7 @@ class LocaleUsageExample {
     @Test
     @DisplayName("Create config with custom locale (Spanish Mexico)")
     void customLocale() {
-        Locale mexicanSpanish = new Locale("es", "MX");
+        Locale mexicanSpanish = Locale.of("es", "MX");
 
         GeneratorConfig config = GeneratorConfig.builder()
                                                 .locale(mexicanSpanish)
